# flarestack

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  Dockerfile  LICENSE.txt  README.md  build.py  conda_env.yml  config.py  mypy.ini  pyproject.toml  requirements.txt  runtime.txt  setup.py  shared.py  test.py
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: automerge.yml  black.yml  codeql-analysis.yml  continous_integration.yml  isort.yml  lint.yml
IceCube_data/: pointsource_7year.py
analyses/fermi/: gb6_fermi_blazar_flare_search.py
analyses/general/: compare_negative_n_s_time.py  energy_decade_sensitivity.py  study_timePDF_misalignment.py  study_timePDF_scaling.py
analyses/tde/: calculate_DaiFang_neutrino_numbers.py  compare_cluster_search_to_time_integration.py  compare_fitting_weights.py  compare_flare_to_box.py  compare_flare_to_box.py___jb_old___  compare_flare_to_box.py___jb_tmp___  compare_flare_to_box_stacked.py  compare_spectral_indices.py  compare_spectral_indices_individual.py  shared_TDE.py  unblind_individual_tdes.py
cluster/: SubmitDESY.sh
core/: energy_PDFs.py  injector.py  llh.py  minimisation.py  results.py  signal_over_background.py  time_PDFs.py  ts_distributions.py  unblinder.py  unblinding.py
data/: icecube_diffuse_8year.py  icecube_gfu_2.5_year.py  icecube_gfu_2point5_year.py  icecube_gfu_v002_p01.py  icecube_gfu_v002_p02.py  icecube_northern_tracks_v002_p01.py  icecube_pointsource_7_year.py  icecube_pointsource_7year.py  icecube_ps_tracks_v002_p01.py  tools.py
docs/: conf.py  index.rst  requirements.txt
docs/ipython_notebooks/: 0-Setting up Flarestack.ipynb  0_setup.ipynb  1-Introducing the public IceCube dataset.ipynb  1_public_dataset.ipynb
docs/source/: api.rst  conf.py  data_types.md  datasets.md  flarestack_llh_workshop.ipynb  index.rst  setup.md
examples/: create_scrambled_dataset.py
examples/ipython_notebooks/: 0-Setting up Flarestack.ipynb  1-Introducing the public IceCube dataset.ipynb  Introduction to cosmo.ipynb  New-Tutorial.ipynb  NorthernTracks_MCtime_Benchmark.ipynb  Simulating datasets.ipynb  analysis_with_simulated_data.ipynb  flarestack_llh_workshop.ipynb  intro_to_transient_cosmology.ipynb  mcmc_example.ipynb  mcmc_example_catalog.npy  simulating_a_dataset.ipynb
flarestack/: __init__.py  build.py  config.py  precompute.py  shared.py
flarestack/cluster/: SubmitDESY.sh  __init__.py  make_cluster_script.py  make_desy_cluster_script.py  make_local_bash_script.py  run_desy_cluster.py  run_desy_cluster_job_id.py  submitter.py
flarestack/core/: angular_error_modifier.py  astro.py  data_types.py  energy_PDFs.py  energy_pdf.py  injector.py  llh.py  make_band_masks_wrapper.py  minimisation.py  multiprocess_wrapper.py  pull_corrector.py  results.py  spatial_pdf.py  time_PDFs.py  time_pdf.py  ts_distributions.py  unblinding.py
flarestack/cosmo/: __init__.py  neutrino_cosmology.py  simulate_catalogue.py
flarestack/data/: __init__.py  dataset_index.py
flarestack/icecube_utils/: __init__.py  atmospheric_neutrino_spectrum.py  dataset_loader.py  reference_sensitivity.py
flarestack/misc/: check_min_angular_error.py  convert_diffuse_flux_contour.py  convert_diffuse_flux_contour_6yrNT.py  convert_diffuse_flux_contour_8yrNT.py  convert_diffuse_flux_contour_9.5yrNT.py  (+5 more)
misc/: flare_llh_plots.py  negative_ns_plots.py  plot_data_rate.py  plots_azimuth_asymmetry.py
tests/: TEST0.py  TEST1.py  benchmark_blazar_flare_search.py  benchmark_improved_point_source_sensitivity.py  benchmark_point_source_sensitivity.py  compare_brute_seed.py  compare_flare_to_box.py  compare_negative_n_s.py  compare_negative_n_s_time-dependence.py  compare_tde_flare_to_box.py  compare_tde_flare_to_box2.py  energy_decade_sensitivity.py  point_source_sensitivity.py  test_asimov_estimator.py  test_cosmo.py  test_cosmo_rates.py  test_custom_datasets.py  test_dataset_index.py  test_energy_pdfs.py  test_flare_search.py  test_full_analysis_chain.py  test_likelihood_fixed_energy.py  test_likelihood_spatial.py  test_likelihood_standard.py  test_likelihood_standard_matrix.py  test_likelihood_standard_overlapping.py  test_mh_analysis_chain.py  test_mh_fit_weights.py  test_mh_fixed_weights.py  test_mh_flare.py  test_mh_large_catalogue.py  test_negative_ns.py  test_setup.py  test_simcube.py  test_simulate_catalogue.py  test_submitter.py  test_timePDF_misalignment.py  test_timePDF_scaling.py  test_time_integrated.py  test_time_pdfs.py  (+5 more)
utils/: create_acceptance_functions.py  custom_seasons.py  dataset_loader.py  import_good_run_list.py  make_SoB_splines.py  neutrino_astronomy.py  prepare_catalogue.py  read_good_run_list.py  reference_sensitivity.py  skylab_reference.py
(+607 files in other folders)
