[tool.poetry]
name = "flarestack"
version = "2.4.5"
description = "Package for unbinned likelihood analysis of physics data"
authors = ["Robert Stein <rdstein@caltech.edu>"]
maintainers = [
    "Robert Stein <rdstein@caltech.edu>",
    "Jannis Necker <jannis.necker@desy.de>",
    "Massimiliano Lincetto <lincetto@astro.ruhr-uni-bochum.de>"
]
license = "MIT"
repository = "https://github.com/icecube/flarestack"
documentation = "https://flarestack.readthedocs.io/en/latest/?badge=latest"
keywords = ["astroparticle physics", "science", "unbinned likelihood", "IceCube"]
readme = "README.md"
classifiers = [
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
astropy = "~5"
healpy = "~1.16"
jupyter = "~1"
matplotlib = "~3"
numexpr = "~2.8"
numpy = "~1.26"
scipy = "~1.11"

[tool.poetry.dev-dependencies]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "~5"
sphinx-rtd-theme = "~1"
myst-parser = "~0.18"
nbsphinx = ">=0.8.9,<0.10.0"
myst-nb = ">=0.16,<0.18"


[tool.poetry.group.dev.dependencies]
mypy = "~1.5"
black = "~23.7"
isort = "~5.12"
pylint = "~2.17"
coveralls = "~3.3"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
