[tool.poetry]
name = "flarestack"
version = "2.4.8"
description = "Package for unbinned likelihood analysis of physics data"
authors = ["Robert Stein <rdstein@caltech.edu>"]
maintainers = [
    "Robert Stein <rdstein@caltech.edu>",
    "Jannis Necker <jannis.necker@desy.de>",
    "Massimiliano Lincetto <lincetto@astro.ruhr-uni-bochum.de>"
]
license = "MIT"
repository = "https://github.com/icecube/flarestack"
documentation = "https://flarestack.readthedocs.io/en/latest/?badge=latest"
keywords = ["astroparticle physics", "science", "unbinned likelihood", "IceCube"]
readme = "README.md"
classifiers = [
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
astropy = ">=5.1,<7.0"
coveralls = ">=3.3.1,<5.0.0"
healpy = "^1.16.1"
jupyter = "^1.0.0"
matplotlib = "^3.5.2"
numexpr = "^2.8.3"
numpy = "^1.23.1"
scipy = "^1.13.1"
urllib3 = "2.3.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.12"
mypy = "^1.5.1"
Sphinx = "^5.1.1"
sphinx-rtd-theme = ">=1,<3"
myst-parser = "^0.18.0"
nbsphinx = ">=0.8.9,<0.10.0"
myst-nb = ">=0.16,<0.18"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
